--- a/lm_eval/tasks/gsm8k/gsm8k.yaml
+++ b/lm_eval/tasks/gsm8k/gsm8k.yaml
@@ -3,23 +3,25 @@ tag:
 task: gsm8k
 dataset_path: gsm8k
 dataset_name: main
+process_docs: !function utils.process_docs
 output_type: generate_until
 training_split: train
 fewshot_split: train
 test_split: test
 doc_to_text: "Question: {{question}}\nAnswer:"
+process_results: !function utils.process_results
 doc_to_target: "{{answer}}" #" {{answer.split('### ')[-1].rstrip()}}"
-metric_list:
-  - metric: exact_match
-    aggregation: mean
-    higher_is_better: true
-    ignore_case: true
-    ignore_punctuation: false
-    regexes_to_ignore:
-      - ","
-      - "\\$"
-      - "(?s).*#### "
-      - "\\.$"
+# metric_list:
+#   - metric: exact_match
+#     aggregation: mean
+#     higher_is_better: true
+#     ignore_case: true
+#     ignore_punctuation: false
+#     regexes_to_ignore:
+#       - ","
+#       - "\\$"
+#       - "(?s).*#### "
+#       - "\\.$"
 generation_kwargs:
   until:
     - "Question:"
@@ -27,19 +29,41 @@ generation_kwargs:
     - "<|im_end|>"
   do_sample: false
   temperature: 0.0
-repeats: 1
-num_fewshot: 5
+metric_list:
+  - metric: exact_match_pass@1
+    aggregation: mean
+    higher_is_better: true
+  - metric: flexible_match_pass@1
+    aggregation: mean
+    higher_is_better: true
+  - metric: exact_match_pass@10
+    aggregation: mean
+    higher_is_better: true
+  - metric: flexible_match_pass@10
+    aggregation: mean
+    higher_is_better: true
+repeats: 10
+num_fewshot: 4
 filter_list:
-  - name: "strict-match"
+  - name: "take_first_k"
     filter:
-      - function: "regex"
-        regex_pattern: "#### (\\-?[0-9\\.\\,]+)"
-      - function: "take_first"
-  - name: "flexible-extract"
-    filter:
-      - function: "regex"
-        group_select: -1
-        regex_pattern: "(-?[$0-9.,]{2,})|(-?[0-9]+)"
-      - function: "take_first"
+      - function: "take_first_k"
+        k: 10
+# filter_list:
+#   - name: "strict-match"
+#     filter:
+#       - function: "regex"
+#         regex_pattern: "#### (\\-?[0-9\\.\\,]+)"
+#       - function: "take_first"
+#   - name: "flexible-extract"
+#     filter:
+#       - function: "regex"
+#         group_select: -1
+#         regex_pattern: "(-?[$0-9.,]{2,})|(-?[0-9]+)"
+#       - function: "take_first"
+dataset_kwargs:
+  trust_remote_code: true
+fewshot_config:
+  sampler: first_n
 metadata:
   version: 3.0
